--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -280,15 +280,16 @@
     <string name="kb210sub1">Health Personnel</string>
     <string name="kb210sub2">Other Person</string>
     <string name="kb210a"> ڊاڪٽر </string>
-    <string name="kb210b"> نرس/مڊوائيف/ايل ايڇ ڊبليو </string>
-    <string name="kb210c"> ڪمنيونٽي مڊوائيف </string>
-    <string name="kb210d"> ٻيو ماڻهو </string>
-    <string name="kb210e"> دائي-ٽي بي اي </string>
-    <string name="kb210f"> ليڊي هيلٿ ورڪر </string>
+    <string name="kb210b"> نرس </string>
+    <string name="kb210c"> مڊوائيف </string>
+    <string name="kb210d"> ايل ايڇ وي </string>
+    <string name="kb210e"> ڪميونٽي مڊوائيف </string>
+    <string name="kb210f"> دائي-ٽي بي اي </string>
+    <string name="kb210g"> ليڊي هيلٿ ورڪر </string>
     <string name="kb211"> توهان طبي معائنو ڪٿي ڪرايو؟ </string>
     <string name="kb211sub1"> Home</string>
     <string name="kb211sub2"> Public Medical Sector</string>
-    <string name="kb211sub3"> Public Medical Sector</string>
+    <string name="kb211sub3"> Private Medical Sector</string>
     <string name="kb211a"> توهان جي گھر </string>
     <string name="kb211b"> ايل ايڇ وي/سي ايم ڊليو/ٽي بي اي/دائي جو گھر </string>
     <string name="kb211c"> سرڪاري اسپتال </string>
@@ -309,7 +310,7 @@
     <string name="kb212i"> ٻارن ۾ وقفي جي بابت سمجھاڻي </string>
     <string name="kb213"> موجوده حمل دوران ڇا اوهان اضافي غذائي خوراڪ استعمال ڪئي آهي؟ </string>
     <string name="kb214"> جيڪڏهن ها ته توهان ڇا وٺو پيا؟ </string>
-    <string name="kb214a"> اد ۽ فولڪ اسڊ جون گوريون </string>
+    <string name="kb214a"> فولاد ۽ فولڪ اسڊ جون گوريون </string>
     <string name="kb214b"> اضافي خوراڪ مان ٺهيل شيون </string>
     <string name="kb214c"> ڪيلشم جي خوراڪ </string>
     <string name="kb215"> حمل جي دوران اوهان ڪيترا ڀيرا فولاد ۽ فولڪ ايسڊ جون گوريون استعمال ڪيون هيون؟ </string>
@@ -340,7 +341,7 @@
     <string name="kb220"> ويم ڪرائڻ جي باري ۾ توهان ڪهڙي جڳھ جو سوچيو آهي؟ </string>
     <string name="kb220sub1"> Home</string>
     <string name="kb220sub2"> Public Medical Sector</string>
-    <string name="kb220sub3"> Public Medical Sector</string>
+    <string name="kb220sub3"> Private Medical Sector</string>
     <string name="kb220a"> پنهنجي گھر </string>
     <string name="kb220b"> ايل ايڇ وي/سي ايم ڊليو/ٽي بي اي/دائي جو گھر </string>
     <string name="kb220c"> سرڪاري اسپتال </string>
