--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -385,18 +385,23 @@
     <string name="kc204b"> 2nd TRIMESTER </string>
     <string name="kc204c"> 1st TRIMESTER </string>
     <string name="kc205"> ڪنهن کان طبي معائنو ڪرايو؟ </string>
+    <string name="kc205a1"> HEALTH PERSONNEL </string>
     <string name="kc205a"> ڊاڪٽر </string>
-    <string name="kc205b"> نرس/مڊوائيف/ايل ايڇ ڊبليو </string>
-    <string name="kc205c"> ڪمنيونٽي مڊوائيف </string>
-    <string name="kc205d"> ٻيو ڪو </string>
-    <string name="kc205e"> دائي-ٽي بي اي </string>
-    <string name="kc205f"> ليڊي هيلٿ ورڪر </string>
+    <string name="kc205b"> نرس </string>
+    <string name="kc205c"> مڊوائيف </string>
+    <string name="kc205d"> ايل ايڇ وي </string>
+    <string name="kc205e"> ڪميونٽي مڊوائيف </string>
+    <string name="kc205f"> دائي-ٽي بي اي </string>
+    <string name="kc205g"> ليڊي هيلٿ ورڪر </string>
     <string name="kc206"> توهان ڪٿي حمل جو طبي معائنو ڪرايو؟ </string>
+    <string name="kc206sub1"> HOME </string>
     <string name="kc206a"> پنهنجي گھر </string>
     <string name="kc206b"> ٻئي ڪنهن گھر </string>
+    <string name="kc206sub2"> PUBLIC MEDICAL SECTOR </string>
     <string name="kc206c"> سرڪاري اسپتال </string>
     <string name="kc206d"> سرڪاري ڪلينڪ/هيلٿ سينٽر </string>
     <string name="kc206e"> سرڪاري ڊسپينسري </string>
+    <string name="kc206sub3"> PRIVATE MEDICAL SECTOR </string>
     <string name="kc206f"> خانگي اسپتال </string>
     <string name="kc206g"> خانگي ڪلينڪ </string>
     <string name="kc206h"> خانگي ويم گھر </string>
