--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,9 +159,9 @@
     <string name="ka109k"> ٽينڪر يا ٽرڪ </string>
     <string name="ka109l"> فلٽر ٿيل پاڻي </string>
     <string name="ka109m"> ريڙهي واري ٽانڪي </string>
-    <string name="ka109n"> زميني سطح وارو پاڻي )ندي، ڊيم، ڍنڍ ، تلا، وهندڙ پاڻي، ڪينال( </string>
+    <string name="ka109n"> زميني سطح وارو پاڻي ندي، ڊيم، ڍنڍ ، تلا، وهندڙ پاڻي، ڪينال </string>
     <string name="ka109o"> گهگهي وارو پاڻي </string>
-    <string name="ka110"> گهر ۾ پيئڻ جي پاڻي جو اهم ذريعوڪهڙو آهي؟ </string>
+    <string name="ka110"> گهر ۾ ٻين ڪم ڪارين جي لاءِ  جهڙوڪ رڌ پچاءَ هٿ ڌوئڻ وغيره لاءِ استعمال ٿيندڙ پاڻي جو اهم ذريعو ڪهڙو آهي؟ </string>
     <string name="ka110sub"> نل جو پاڻي </string>
     <string name="ka110a"> گهر جو نلڪو </string>
     <string name="ka110b"> ٻاهريون نلڪو </string>
@@ -179,18 +179,18 @@
     <string name="ka110k"> ٽينڪر يا ٽرڪ </string>
     <string name="ka110l"> فلٽر ٿيل پاڻي </string>
     <string name="ka110m"> ريڙهي واري ٽانڪي </string>
-    <string name="ka110n"> زميني سطح وارو پاڻي )ندي، ڊيم، ڍنڍ ، تلا، وهندڙ پاڻي، ڪينال( </string>
+    <string name="ka110n"> زميني سطح وارو پاڻي ندي، ڊيم، ڍنڍ ، تلا، وهندڙ پاڻي، ڪينال </string>
     <string name="ka110o"> گهگهي وارو پاڻي </string>
     <string name="ka111"> ا گهر جو ڪو ڀاتي ڪنهن وقت يا روزانو پاڻي کڻڻ لاءِ ويندو آهي؟ </string>
     <string name="ka112"> پاڻي حاصل ڪرڻ ۽ کڻي اچڻ لاءِ ڪيترو وقت لڳي ٿو؟ </string>
     <string name="ka112a"> منٽن جي حساب سان </string>
     <string name="ka113"> گهڻو ڪري پاڻي ڀرڻ جي لاءِ گهر مان ڪير ويندو آهي؟
-  ( پڇو: ڇا اهو فرد 15سالن کان گهٽ عمر جو آهي؟ ڪهڙي جنس آهي؟ ان کي دائرو ڏيو جيڪو وڌيڪ پاڻي ڀرڻ ويندو آهي)
+  ( پڇو: ڇا اهو فرد 15 سالن کان گهٽ عمر جو آهي؟ ڪهڙي جنس آهي؟ ان کي دائرو ڏيو جيڪو وڌيڪ پاڻي ڀرڻ ويندو آهي)
 </string>
     <string name="ka113a"> بالغ عورت </string>
     <string name="ka113b"> بالغ مرد </string>
-    <string name="ka113c"> ڇوڪري ( 81 سالن کان ننڍي عمر جي) </string>
-    <string name="ka113d"> ڇوڪرو( 51 سالن کان ننڍي عمر جو) </string>
+    <string name="ka113c"> ڇوڪري ( 15 سالن کان ننڍي عمر جي) </string>
+    <string name="ka113d"> ڇوڪرو( 15 سالن کان ننڍي عمر جو) </string>
     <string name="ka114"> ڇا توهان پيئڻ جي پاڻي کي صاف ڪرڻ لاءِ ڪو طريقو
     استعمال ڪريو ٿا؟ </string>
     <string name="ka115"> پيئڻ جي پاڻي کي صاف ڪرڻ لاءِ توهان اڪثر ڪهڙو طريقو استعمال ڪندا آهيو؟ </string>
