--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="drem">ياد ناهي </string>
     <string name="dkndrem">خبر ناهي/ياد ناهي</string>
     <string name="kg"> ڪلوگرام </string>
+    <string name="kc307rec"> وزن بابت يادگيري ڪرايو </string>
     <string name="weeks"> هفتا </string>
     <string name="days"> ڏينهن </string>
     <string name="min"> منٽ </string>
@@ -464,22 +465,25 @@
     <string name="kc3heading"> ٻار جي ڄمڻ کان پوءِ جي سنڀال (گزريل حمل) </string>
     <string name="kc301"> توهان جو گذريل حمل ڪنهن ڪرايوهو؟ </string>
     <string name="kc301a"> ڊاڪٽر </string>
-    <string name="kc301b"> نرس مڊ وائيف </string>
-    <string name="kc301c"> ٻيو ڪو ماڻهو </string>
-    <string name="kc301d"> دائي </string>
-    <string name="kc301e"> ڪميونٽي هيلٿ ورڪر </string>
-    <string name="kc301f"> مائيٽ/دوست </string>
-    <string name="kc301g"> ڪنهن به نه </string>
+    <string name="kc301b"> نرس </string>
+    <string name="kc301c"> مڊ وائيف </string>
+    <string name="kc301d"> ايل ايڇ وي </string>
+    <string name="kc301e"> دائي </string>
+    <string name="kc301f"> ڪميونٽي هيلٿ ورڪر </string>
+    <string name="kc301g"> مائيٽ/دوست </string>
+    <string name="kc301h"> ڪنهن به نه </string>
+
     <string name="kc302"> ڇا توهان جي ويم دوران ٻئي ڪنهن مدد ڪئي؟ </string>
     <string name="kc303"> ڇا توهان جي ويم ڪرائڻ جي دوران ويم ڪرائڻ واري کان سواءِ ٻيو ڪو موجود هيو؟ </string>
-    <string name="kc303a"> ليڊي هيٿ وزيٽر </string>
-    <string name="kc303b"> ليڊي هيٿ ورڪر </string>
-    <string name="kc303c"> نرس </string>
-    <string name="kc303d"> ڪمنيونٽي هيلٿ ورڪر </string>
-    <string name="kc303e"> ڪمنيونٽي مڊوائيف </string>
-    <string name="kc303f"> مائيٽ </string>
-    <string name="kc303g"> دوست </string>
-    <string name="kc303h"> دائي/نوڪرياڻي </string>
+    <string name="kc303a"> ڊاڪٽر </string>
+    <string name="kc303b"> ليڊي هيٿ وزيٽر </string>
+    <string name="kc303c"> ليڊي هيٿ ورڪر </string>
+    <string name="kc303d"> نرس </string>
+    <string name="kc303e"> ڪمنيونٽي هيلٿ ورڪر </string>
+    <string name="kc303f"> ڪمنيونٽي مڊوائيف </string>
+    <string name="kc303g"> دائي </string>
+    <string name="kc303h"> مائيٽ </string>
+    <string name="kc303i"> دوست </string>
     <string name="kc304"> توهان جي آخري ٻار جي پيدائش ڪٿي ٿي؟ جڳھ جو پڇو </string>
     <string name="kc304a"> پنهنجي گھر </string>
     <string name="kc304b"> ٻئي ڪنهن گھر </string>
@@ -503,6 +507,7 @@
     <string name="kc308">    جيڪڏهن ٻار گھٽ وزن وارو هيو ته پڇو ته ٻار جي پيدائش 37 هفتن کان پهريائين ٿئي هئي؟
     </string>
     <string name="kc309"> ڇا ٻار کي ڄمڻ کان پوءِ هڪ ڪلاڪ جي اندر توهان پنهنجي ڇاتي سان لڳايو هو؟ </string>
+    <string name="kc309a"> PRETERM BIRTH </string>
     <string name="kc310"> ڇا ٻار ڄمڻ کان پوءِ هڪدم رنو هو؟ </string>
     <string name="kc311"> ٻار کي روئائڻ لاءِ ڇا ڪيو ويو هو؟ </string>
     <string name="kc311a"> مهٽيو </string>
@@ -513,11 +518,12 @@
     <string name="kc313"> ڇاتيءَ سان لڳائڻ کان پهرئين ڇا ٻار کي ويڙهيو ويو هيو؟ </string>
     <string name="kc314"> ناڙي جي ڪٽڻ کان ڪرڻ تائين ڇا توهان ان کي ڪجھ لڳايو هو؟ </string>
     <string name="kc315"> ناڙي تي ڇا لڳايو هو؟ </string>
-    <string name="kc315a"> Chlorhexidine </string>
-    <string name="kc315b"> OTHER ANTISEPTIC (ALCOHOL, SPIRIT, GENTIAN VIOLET) </string>
+    <string name="kc315a"> ڪلورو هيگزڊين </string>
+    <string name="kc315b"> ٻيا اينٽي سيپٽڪ (الڪوحل، اسپريٽ ،بلو دوا) </string>
     <string name="kc315c"> يل/مکڻ </string>
     <string name="kc315d"> سرمو </string>
-    <string name="kc315e"> ڇيڻو </string>
+    <string name="kc315e"> ڇار </string>
+    <string name="kc315f"> ڇيڻو </string>
     <string name="kc316">ڄمڻ کان پوءِ پهريون دفعو ڪڏهن ٻار کي ونهجاريو ويو؟</string>
     <string name="kc316a"> يڪدم هڪ ڪلاڪ اندر </string>
     <string name="kc316b"> ڪلاڪ </string>
