--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -517,6 +517,7 @@
     <string name="kc311c"> امبو بيگنگ </string>
     <string name="kc311d"> ٻار آڪسيجن تي هيو </string>
     <string name="kc312"> ڇا ويم ڪرائڻ واريءَ توهان جي ٻار کي خشڪ/صاف ڪيو هو </string>
+    <string name="kc313a"> ڇا ٻار کي ڄمڻ کان پوءِ هڪ ڪلاڪ جي اندر توهان پنهنجي ڇاتي سان لڳايو هو؟ </string>
     <string name="kc313"> ڇاتيءَ سان لڳائڻ کان پهرئين ڇا ٻار کي ويڙهيو ويو هيو؟ </string>
     <string name="kc314"> ناڙي جي ڪٽڻ کان ڪرڻ تائين ڇا توهان ان کي ڪجھ لڳايو هو؟ </string>
     <string name="kc315"> ناڙي تي ڇا لڳايو هو؟ </string>
