--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -517,21 +517,45 @@
     <string name="kc311c"> امبو بيگنگ </string>
     <string name="kc311d"> ٻار آڪسيجن تي هيو </string>
     <string name="kc312"> ڇا ويم ڪرائڻ واريءَ توهان جي ٻار کي خشڪ/صاف ڪيو هو </string>
-    <string name="kc313a"> ڇا ٻار کي ڄمڻ کان پوءِ هڪ ڪلاڪ جي اندر توهان پنهنجي ڇاتي سان لڳايو هو؟ </string>
-    <string name="kc313"> ڇاتيءَ سان لڳائڻ کان پهرئين ڇا ٻار کي ويڙهيو ويو هيو؟ </string>
-    <string name="kc314"> ناڙي جي ڪٽڻ کان ڪرڻ تائين ڇا توهان ان کي ڪجھ لڳايو هو؟ </string>
-    <string name="kc315"> ناڙي تي ڇا لڳايو هو؟ </string>
-    <string name="kc315a"> ڪلورو هيگزڊين </string>
-    <string name="kc315b"> ٻيا اينٽي سيپٽڪ (الڪوحل، اسپريٽ ،بلو دوا) </string>
-    <string name="kc315c"> يل/مکڻ </string>
-    <string name="kc315d"> سرمو </string>
-    <string name="kc315e"> ڇار </string>
-    <string name="kc315f"> ڇيڻو </string>
-    <string name="kc316">ڄمڻ کان پوءِ پهريون دفعو ڪڏهن ٻار کي ونهجاريو ويو؟</string>
-    <string name="kc316a"> يڪدم هڪ ڪلاڪ اندر </string>
-    <string name="kc316b"> ڪلاڪ </string>
-    <string name="kc316c"> ڏينهن </string>
-    <string name="kc316d"> نه ونهجاريو </string>
+    <string name="kc313"> ڇا ٻار کي ڄمڻ کان پوءِ هڪ ڪلاڪ جي اندر توهان پنهنجي ڇاتي سان لڳايو هو؟ </string>
+    <string name="kc314"> ڇاتيءَ سان لڳائڻ کان پهرئين ڇا ٻار کي ويڙهيو ويو هيو؟ </string>
+    <string name="kc315"> ناڙي جي ڪٽڻ کان ڪرڻ تائين ڇا توهان ان کي ڪجھ لڳايو هو؟ </string>
+    <string name="kc316"> ناڙي تي ڇا لڳايو هو؟ </string>
+    <string name="kc316a"> ڪلورو هيگزڊين </string>
+    <string name="kc316b"> ٻيا اينٽي سيپٽڪ (الڪوحل، اسپريٽ ،بلو دوا) </string>
+    <string name="kc316c"> يل/مکڻ </string>
+    <string name="kc316d"> سرمو </string>
+    <string name="kc316e"> ڇار </string>
+    <string name="kc316f"> ڇيڻو </string>
+    <string name="kc317">ڄمڻ کان پوءِ پهريون دفعو ڪڏهن ٻار کي ونهجاريو ويو؟</string>
+    <string name="kc317a"> يڪدم هڪ ڪلاڪ اندر </string>
+    <string name="kc317b"> ڪلاڪ </string>
+    <string name="kc317c"> ڏينهن </string>
+    <string name="kc317d"> نه ونهجاريو </string>
+    <string name="kc318">ٻار جي ڄمڻ کان هڪدم پوءِ توهان ٻار کي ڇا ڏنو؟</string>
+    <string name="kc318a"> ٿڃ </string>
+    <string name="kc318b"> گھٽي </string>
+    <string name="kc318c"> ماکي </string>
+    <string name="kc318d"> گرائپ واٽر </string>
+    <string name="kc318e"> ٻڪري جو کير </string>
+    <string name="kc319"> ڇا توهان پنهنجي ٻار کي پنهنجو پهريون گھاٽو کير پياريو؟ </string>
+    <string name="kc320"> جيڪڏهن نه ته ان جي ڪهڙي وجه هئي؟ </string>
+    <string name="kc320a"> خراب کير </string>
+    <string name="kc320b"> ٻار جي بيمار ٿيڻ جو خطرو </string>
+    <string name="kc320c"> گھاٽو آهي </string>
+    <string name="kc320d"> کر </string>
+    <string name="kc321"> توهان پنهنجي ٻار کي پهريون ڀيرو ڪڏهن کير ڏنو؟ </string>
+    <string name="kc321a"> ڄمڻ کان هڪدم پوءِ </string>
+    <string name="kc321b"> ڄمڻ کان هڪ ڪلاڪ </string>
+    <string name="kc321c"> ڄمڻ جي1 ڪلاڪ کان 6 ڪلاڪن تائينِ </string>
+    <string name="kc321d"> 6 ڪلاڪن کان مٿي پر 24 ڪلاڪن کان گھٽ </string>
+    <string name="kc321e"> 24 ڪلاڪ يا ان کان مٿي </string>
+    <string name="kc322"> توهان پنهنجي ٻار کي پهريون ڀيرو ڪڏهن کير ڏنو؟ </string>
+    <string name="kc322a">  ٻار ڪمزور هو / سائز ۾ ننڍو هو </string>
+    <string name="kc322b"> ٻار کير پيئڻ جي قابل نه هو </string>
+    <string name="kc322c"> مونکي ان وقت کير نه آيو هو </string>
+    <string name="kc322d"> آئون ان وقت ڪمزور /  بيمار هئيس </string>
+    <string name="kc322e"> منهنجي سس ان وقت اجازت نه ڏني هئي </string>
     <string name="kc6heading"> ويم کان پوءِ طبي معائنو (گذريل حمل) </string>
     <string name="kc6sub"> ويم کان پوءِ ماءُ جو طبي معائنو </string>
     <string name="kc601"> ويم کان پوءِ ڇا توهان پنهنجو طبي معائنو ڪرايو هو؟ </string>
