fixed some changes in e

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -803,6 +803,7 @@
 
     <string name="ke411">جيڪڏهن ها ته ڪهڙي مدد ڪندو آهي؟</string>
     <string name="ke411a">ٻار کي خوراڪ کارائڻ وقت ان سان گڏ راند ڪندو آهي</string>
+    <string name="ke411subh">HE FEEDS THE BABY OPTIONS DEPENDING ON AGE :</string>
     <string name="ke411b">هي ٻار کي پاڻ کير(بوتل، ڪوپ يا چمچي) سان پياريندو آهي</string>
     <string name="ke411c">ٻار کي ٺوس غذا کائڻ لاءِ آماده ڪرڻ</string>
 
