--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="end_interview"> اختتام </string>
     <string name="start_interview"> انٹروہو شروع کریں </string>
     <string name="nextSection"> اگلا سیکشن </string>
+    <string name="searchwoman"> Search Woman </string>
     <string name="addMember"> افراد کا اندراج </string>
     <string name="istatus">انٹروہو کا نتیجہ</string>
     <string name="istatusa"> مکمل</string>
@@ -62,8 +63,10 @@
     <string name="endForm">اختتام</string>
     <string name="section_A">  Module A: SOCIO DEMOGRAPHIC INFORMATION (KMC-2018-2020) </string>
     <string name="cra01">ڇا جواب ڏيندڙ تحقيق ۾ حصو وٺڻ لاءِ تيار آهي</string>
-    <string name="crvillage">ڳوٺ/ ايريا جو نالو</string>
+    <string name="crataluka">تعلقه جو نالو</string>
     <string name="cruc">يونين ڪائونسل جو نالو</string>
+    <string name="crvillage">ڳوٺ/ ايريا جو نالو</string>
+    <string name="crwoman">عورت جو نالو</string>
     <string name="cra02">تعلقه جو ڪوڊ</string>
     <string name="cra03"> توليدي عمر واري عورت جو نمبر </string>
     <string name="cra0301"> Arm </string>
